Updated Landing and About page and

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -76,24 +82,19 @@
         </ul>
       </div>
     </nav>
-    <div class="container home-all">
-      <div class="row">
-        <h1 class="home-title text-center">DANIELLE ODA</h1>
-        <p class="home-paragraph text-center">
-          User Experience Designer and Frontend Developer creating elegant and
-          functional web experiences
-        </p>
-      </div>
-      <div class="text-center">
-        <a
-          href="../img/ux-resume.pdf"
-          class="resume-button-home"
-          target="_blank"
-        >
-          RESUME
-        </a>
+    <div class="hero-container">
+      <img src="../img/hero-one-copy.png" class="hero-one" />
+      <div class="hero-info text-center">
+        <h1 class="hero-title">Hi, I'm Danielle</h1>
+        <p class="hero-paragraph">A UX Designer and Engineer from Hawai'i</p>
+        <div class="text-center hero-button">
+          <a href="../pages/portfolio.html" class="resume-button-home">
+            PORTFOLIO
+          </a>
+        </div>
       </div>
     </div>
+
     <footer class="footer-code">
       <div class="text-center">
         This page is
