--- a/pages/about.html
+++ b/pages/about.html
@@ -34,6 +34,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- CSS only -->
     <link rel="stylesheet" href="../style.css" />
@@ -75,7 +81,7 @@
       </div>
     </nav>
     <div class="d-flex justify-content-center about-me-all">
-      <div class="container">
+      <div class="container about-container">
         <div class="row">
           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
             <span
@@ -83,12 +89,12 @@
             /></span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 about-section">
-            <h1 class="about-title mt-4">Hello, I'm Danielle</h1>
+            <h1 class="about-title">Hello, I'm Danielle Oda</h1>
             <p class="about-paragraph mt-3">
               <em
-                >A UX Designer and Front-End Developer who enjoys creating clean
-                & user-friendly designs and building the code bring those
-                products alive.</em
+                >I'm a UX Designer and Engineer who enjoys creating clean &
+                user-friendly designs and building the code to bring those
+                products to life!</em
               >
             </p>
             <p class="about-paragraph-two mt-4">
@@ -98,9 +104,9 @@
               experiences, I have learned the importance of listening to
               clients, understanding their needs and acting upon that knowledge
               to create my best work. After completing an intense UX Design and
-              Front-End program, I’m excited to continue my journey in
-              empathizing with users and building functional design solutions
-              that have accessibility needs in mind.
+              Front-End certification program, I’m excited to continue my
+              journey in empathizing with users and building functional design
+              solutions that have accessibility needs in mind.
             </p>
             <div class="all-buttons">
               <div>
