from new branch

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>
     </nav>
     <div class="hero-container">
+      <!-- ADD TEST NOTE -->
       <img src="../img/hero-one-copy.png" class="hero-one" />
       <div class="hero-info text-center">
         <h1 class="hero-title">Hi, I'm Danielle</h1>
