updated html, js and css for home and about page

--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link" href="#about-id">ABOUT</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" href="../pages/portfolio.html"
               >PORTFOLIO <span class="sr-only"></span
             ></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">ABOUT</a>
-          </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="mailto:hello.danielleoda@gmail.com"
               >CONTACT</a
@@ -83,15 +84,15 @@
         </ul>
       </div>
     </nav>
-    <!-- HOME CONTENT -->
+    <!-- HOME CONTENT -------------------------------------------------------------------->
     <div class="hero-container container text-center">
       <!-- <img src="../img/hero-one-copy.png" class="hero-one" /> -->
       <div class="hero-info row">
         <div class="col-lg-12">
             <div class="hero-desc">
-              <h1 class="hero-title">Hello, I'm Danielle</h1>
+              <h1 class="hero-title">Hello, I'm Danielle<span class="gray">.</span></h1>
               <p class="hero-paragraph">
-                A Front End Developer with UX Design chops 
+                A <span class="bold">Front End Developer</span> with <span class="bold">UX Design</span> chops 
                 <br />
                 <p class="hero-paragraph">who loves
                 <span class="text-animation"></span></p>
@@ -123,7 +124,7 @@
     <div class="horizontal-line"></div>
 
     <!-- ABOUT SECTION ------------------------------------------------------------------>
-    <div class="d-flex justify-content-center about-me-all">
+    <div id="about-id" class="d-flex justify-content-center about-me-all">
       <div class="container about-container">
         <h3 class="about-header">ABOUT</h3>
         <div class="row">
@@ -133,30 +134,24 @@
             /></span>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 about-section">
-            <h3 class="about-title">A little bit about me...</h3>
+            <h3 class="about-title">Who is Danielle?</h3>
             <p class="about-paragraph mt-3">
-              <em
-                >I'm a UX Designer and Engineer who enjoys creating clean &
-                user-friendly designs and building the code to bring those
-                products to life!</em
-              >
+              A musician turned Front-End Developer who has an eye for UX Design.
             </p>
             <p class="about-paragraph-two mt-4">
-              Having spent much of my time in music teaching and music business,
-              I am equipped with strong communication skills, a highly creative
-              eye, and a strong ability to empathize. Within all my prior work
-              experiences, I have learned the importance of listening to
-              clients, understanding their needs and acting upon that knowledge
-              to create my best work. After completing an intense UX Design and
-              Front-End certification program, I’m excited to continue my
-              journey in empathizing with users and building functional design
-              solutions that have accessibility needs in mind.
+              I'm passionate about building on the intersection of UX Design and the engineering the code to make it happen. A highly functional design, user experience and elegant code structure all matter to me. I believe in the power of simplicity.
+              <br />
+              <br />
+              I have a <strong>BA in Arts from</strong> <a class="about-link" href="https://www.hawaii.edu/">University of Hawai'i</a> (Honolulu, Hawai'i is where I was born and raised!), a <strong>Certificate in UX Design</strong> from <a class="about-link" href="https://www.coursera.org/">Coursera</a>, a <strong>Certificate in Front-End Development</strong> from <a class="about-link" href="https://www.shecodes.io/">SheCodes</a> and a <strong>Certificate in Web Development</strong> from <a class="about-link" href="https://www.udemy.com/course/the-complete-web-developer-zero-to-mastery/">Udemy's ZTM</a>
+              <br />
+              <br />
+              I'm enjoy creating things, refining them, and making them better. I am great at working independently and with others, and am open to looking forward to working with a team that shares similar values. 
             </p>
             <div class="all-buttons">
-              <div>
+              <div class="hero-button">
                 <a
                   href="../img/ux-resume.pdf"
-                  class="resume-button"
+                  class="resume-button-home hero-button-portfolio"
                   target="_blank"
                 >
                   RESUME
@@ -227,7 +222,7 @@
         </div>
       </div>
     </div>
-    <!-- FOOTER -->
+    <!-- FOOTER -------------------------------------------------------------------------------->
     <footer class="footer-code">
       <div class="text-center">
         This page is
