--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             <a class="nav-link" href="#about-id">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/portfolio.html"
+            <a class="nav-link active" href="#portfolio-id"
               >PORTFOLIO <span class="sr-only"></span
             ></a>
           </li>
-          
+
           <li class="nav-item">
             <a class="nav-link" href="mailto:hello.danielleoda@gmail.com"
               >CONTACT</a
@@ -89,33 +89,41 @@
       <!-- <img src="../img/hero-one-copy.png" class="hero-one" /> -->
       <div class="hero-info row">
         <div class="col-lg-12">
-            <div class="hero-desc">
-              <h1 class="hero-title">Hello, I'm Danielle<span class="gray">.</span></h1>
-              <p class="hero-paragraph">
-                A <span class="bold">Front End Developer</span> with <span class="bold">UX Design</span> chops 
-                <br />
-                <p class="hero-paragraph">who loves
-                <span class="text-animation"></span></p>
-              </p>
+          <div class="hero-desc">
+            <h1 class="hero-title">
+              Hello, I'm Danielle<span class="gray">.</span>
+            </h1>
+            <p class="hero-paragraph">
+              A <span class="bold">Front End Developer</span> with
+              <span class="bold">UX Design</span> chops <br />
+            </p>
+
+            <p class="hero-paragraph">
+              who loves
+              <span class="text-animation"></span>
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-12 d-flex justify-content-center">
+          <div class="hero-buttons-all">
+            <div class="hero-button">
+              <a
+                href="../pages/portfolio.html"
+                class="resume-button-home hero-button-portfolio"
+              >
+                PORTFOLIO
+              </a>
+            </div>
+            <div class="hero-button">
+              <a
+                href="../pages/portfolio.html"
+                class="resume-button-home hero-button-contact"
+              >
+                CONTACT ME
+              </a>
             </div>
           </div>
-          <div class="col-lg-12 d-flex justify-content-center">
-            <div class="hero-buttons-all">
-              <div class="hero-button">
-                <a href="../pages/portfolio.html" class="resume-button-home hero-button-portfolio">
-                  PORTFOLIO
-                </a>
-              </div>
-              <div class="hero-button">
-                <a
-                  href="../pages/portfolio.html"
-                  class="resume-button-home hero-button-contact"
-                >
-                  CONTACT ME
-                </a>
-              </div>
-            </div>
-          </div>
+        </div>
         <!-- <div class="col-lg-6">
           <img class="home-img-july" src="img/home-img-july.png" />
         </div> -->
@@ -136,16 +144,37 @@
           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 about-section">
             <h3 class="about-title">Who is Danielle?</h3>
             <p class="about-paragraph mt-3">
-              A musician turned Front-End Developer who has an eye for UX Design.
+              A musician turned Front-End Developer who has an eye for UX
+              Design.
             </p>
             <p class="about-paragraph-two mt-4">
-              I'm passionate about building on the intersection of UX Design and the engineering the code to make it happen. A highly functional design, user experience and elegant code structure all matter to me. I believe in the power of simplicity.
+              I'm passionate about building on the intersection of UX Design and
+              the engineering the code to make it happen. A highly functional
+              design, user experience and elegant code structure all matter to
+              me. I believe in the power of simplicity.
               <br />
               <br />
-              I have a <strong>BA in Arts from</strong> <a class="about-link" href="https://www.hawaii.edu/">University of Hawai'i</a> (Honolulu, Hawai'i is where I was born and raised!), a <strong>Certificate in UX Design</strong> from <a class="about-link" href="https://www.coursera.org/">Coursera</a>, a <strong>Certificate in Front-End Development</strong> from <a class="about-link" href="https://www.shecodes.io/">SheCodes</a> and a <strong>Certificate in Web Development</strong> from <a class="about-link" href="https://www.udemy.com/course/the-complete-web-developer-zero-to-mastery/">Udemy's ZTM</a>
+              I have a <strong>BA in Arts from</strong>
+              <a class="about-link" href="https://www.hawaii.edu/"
+                >University of Hawai'i</a
+              >
+              (Honolulu, Hawai'i is where I was born and raised!), a
+              <strong>Certificate in UX Design</strong> from
+              <a class="about-link" href="https://www.coursera.org/">Coursera</a
+              >, a <strong>Certificate in Front-End Development</strong> from
+              <a class="about-link" href="https://www.shecodes.io/">SheCodes</a>
+              and a <strong>Certificate in Web Development</strong> from
+              <a
+                class="about-link"
+                href="https://www.udemy.com/course/the-complete-web-developer-zero-to-mastery/"
+                >Udemy's ZTM</a
+              >
               <br />
               <br />
-              I'm enjoy creating things, refining them, and making them better. I am great at working independently and with others, and am open to looking forward to working with a team that shares similar values. 
+              I'm enjoy creating things, refining them, and making them better.
+              I am great at working independently and with others, and am open
+              to looking forward to working with a team that shares similar
+              values.
             </p>
             <div class="all-buttons">
               <div class="hero-button">
@@ -217,6 +246,228 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="horizontal-line"></div>
+    <!-- PORTFOLIO ----------------------------------------------------------------------------->
+    <div id="portfolio-id" class="portfolio-all d-flex justify-content-center">
+      <div class="container">
+        <h3 class="about-header">PORTOFLIO</h3>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <h3 class="about-title mb-5">Some projects I built</h3>
+          <div class="col-xl-6">
+            <h4>SMARTBRAIN FACE RECOGNITION</h4>
+            <p>
+              Smartbrain can detect faces in your photographs! If you are
+              curious, paste an image link and and see if Smartbrain's REST API
+              can magically locate those faces!
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <a class="portfolio-button">Details</a>
+              <a class="portfolio-button right-button">Github</a>
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/petconnect-home-2470.png"
+            />
+          </div>
+        </div>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/petconnect-home-2470.png"
+            />
+          </div>
+          <div class="col-xl-6">
+            <h4>CROWN CLOTHING STORE</h4>
+            <p>
+              Welcome to Crown Clothing, a modern look with an easy way to
+              purchase clothing. Crown Clothing uses Firebase to store users and
+              a Stripe API for convenient (and safe) checkout!
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <button>Details</button>
+              <button>Github</button>
+            </div>
+          </div>
+        </div>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <h4>MONSTERS ROLODEX</h4>
+            <p>
+              Ready for Halloween? You don't need to be with Monsters Rolodex -
+              a fun way to filter through monsters and see their contact info!
+              The color scheme is crafted to get you in the mood for some
+              trick-or-treating!
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <button>Details</button>
+              <button>Github</button>
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/petconnect-home-2470.png"
+            />
+          </div>
+        </div>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/weather-img-july.png"
+            />
+          </div>
+          <div class="col-xl-6">
+            <h4>WEATHER APP</h4>
+            <p>
+              If you're heading to another city and want to check the weather
+              forecast there, look no furher! Weather App uses an API that
+              allows you to enter a city and view the current conditions and
+              forecast for the week!
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <a
+                href="https://quirky-lichterman-84f5c8.netlify.app/"
+                class="portfolio-button"
+                >View App</a
+              >
+              <a
+                href="https://github.com/odadki/react-weather-app"
+                class="portfolio-button right-button"
+                >Github</a
+              >
+            </div>
+          </div>
+        </div>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <h4>DICTIONARY APP</h4>
+            <p>
+              Need a dictionary on-the-go? Dictionary App is perfect for those
+              times you need to look something up - it even has a phonetics API
+              that pronounces the word for you so you'll know for certain your
+              pronunciation is on-point!
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <a
+                href="https://loving-hermann-fdb059.netlify.app/"
+                class="portfolio-button"
+                >View App</a
+              >
+              <a
+                href="https://github.com/odadki/dictionary-project"
+                class="portfolio-button right-button"
+                >Github</a
+              >
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/dictionary-home-july.png"
+            />
+          </div>
+        </div>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="../img-ux/carrots-final-july.png"
+            />
+          </div>
+          <div class="col-xl-6">
+            <h4>CARROTS COOKING</h4>
+            <p>
+              This UX Design project was built as a mobile-first app for kids
+              that love cooking! The title was playfully titled "Carrots" with
+              kids in mind, and underwent two usability studies to achieve the
+              final result. All wireframes and mockups were created with Figma
+              and responsive, with designs fitted to mobile, tablet and
+              desktop-sized devices.
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <a
+                href="../projects/ux-two-cook.html"
+                class="portfolio-button"
+                alt="Carrots Cooking App for Kids"
+                >Project Details</a
+              >
+            </div>
+          </div>
+        </div>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <h4>BOUTIQUEAPP</h4>
+            <p>
+              If you want a clean design with easy checkout, take a look at this
+              UX Design project, BoutiqueApp! It features mockups with Figma and
+              includes a simple color scheme with clear buttons so users are
+              certain on the navigation.
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <a
+                href="../projects/ux-one-boutique.html"
+                class="portfolio-button"
+                alt="BoutiqueApp Clothing"
+                >Project Details</a
+              >
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update-mobile img-fluid"
+              src="./img-ux/boutique-homepage-july.png"
+            />
+          </div>
+        </div>
+        <!-- INDIVIDUAL PROJECT ----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/petconnect-home-2470-july.png"
+            />
+          </div>
+          <div class="col-xl-6">
+            <h4>PETCONNECT</h4>
+            <p>
+              A UX Design project created with Adobe XD that aims to allow users
+              to browse online and schedule a time to see a pet they are
+              interested in. The goal was to design a website with clear
+              navigation with all the details a potential pet owner would like
+              to see. Going through usability studies, the design went though a
+              few iterations in order to iron out pain points.
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <a
+                href="../projects/ux-three-pet.html"
+                class="portfolio-button"
+                alt="PetConnect Adoption Flow"
+                >Project Details</a
+              >
             </div>
           </div>
         </div>
