--- a/index.html
+++ b/index.html
@@ -304,23 +304,31 @@
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
           <div class="col-xl-6">
-            <h4>MONSTERS ROLODEX</h4>
+            <h4>ROBOFRIENDS</h4>
             <p>
-              Ready for Halloween? You don't need to be with Monsters Rolodex -
-              a fun way to filter through monsters and see their contact info!
-              The color scheme is crafted to get you in the mood for some
-              trick-or-treating!
+              Ready for some robots? Take a look at Robofriends app - a fun way
+              to filter through robots and see their contact info! The site is
+              created with React and is fully responsive so you can view it on
+              any device!
             </p>
             <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
             <div class="project-buttons">
-              <button>Details</button>
-              <button>Github</button>
+              <a
+                href="https://odadki.github.io/robofriends-app-2/"
+                class="portfolio-button"
+                >View App</a
+              >
+              <a
+                href="https://github.com/odadki/robofriends-app-2"
+                class="portfolio-button right-button"
+                >Github</a
+              >
             </div>
           </div>
           <div class="col-xl-6">
             <img
               class="portfolio-img-update img-fluid"
-              src="./img/petconnect-home-2470.png"
+              src="./img/robofriends-img-july.png"
             />
           </div>
         </div>
