added shopping list and updated boutiqueapp img

--- a/index.html
+++ b/index.html
@@ -155,20 +155,23 @@
               <br />
               <br />
               I have a <strong>BA in Arts from</strong>
-              <a class="about-link" href="https://www.hawaii.edu/"
+              <a class="portfolio-button" href="https://www.hawaii.edu/"
                 >University of Hawai'i</a
               >
               (Honolulu, Hawai'i is where I was born and raised!), a
               <strong>Certificate in UX Design</strong> from
-              <a class="about-link" href="https://www.coursera.org/">Coursera</a
+              <a class="portfolio-button" href="https://www.coursera.org/"
+                >Coursera</a
               >, a <strong>Certificate in Front-End Development</strong> from
-              <a class="about-link" href="https://www.shecodes.io/">SheCodes</a>
+              <a class="portfolio-button" href="https://www.shecodes.io/"
+                >SheCodes</a
+              >
               and a <strong>Certificate in Web Development</strong> from
               <a
-                class="about-link"
+                class="portfolio-button"
                 href="https://www.udemy.com/course/the-complete-web-developer-zero-to-mastery/"
-                >Udemy's ZTM</a
-              >
+                >Udemy</a
+              >'s ZTM
               <br />
               <br />
               I'm enjoy creating things, refining them, and making them better.
@@ -301,6 +304,38 @@
             </div>
           </div>
         </div>
+        <!-- INDIVIDUAL PROJECT - EXTRA - SAME AS TOP FORMAT----------------->
+        <div class="row portfolio-each-project">
+          <div class="col-xl-6">
+            <img
+              class="portfolio-img-update img-fluid"
+              src="./img/shopping-list-img-july.png"
+            />
+          </div>
+          <div class="col-xl-6">
+            <h4>SHOPPING LIST</h4>
+            <p>
+              Keep this shopping list handy to add, remove, or check off items
+              on your next grocery run! Built entirely with HTML, CSS and
+              JAVASCRIPT, this app combines a colorful design with practical
+              functionality that will look beautiful on any device.
+            </p>
+            <div class="mb-4">ICONS OF TOOLS USED FOR PROJECT</div>
+            <div class="project-buttons">
+              <a
+                href="https://odadki.github.io/shopping-list/"
+                class="portfolio-button"
+                >View App</a
+              >
+              <a
+                href="https://github.com/odadki/shopping-list"
+                class="portfolio-button right-button"
+                >Github</a
+              >
+            </div>
+          </div>
+        </div>
+
         <!-- INDIVIDUAL PROJECT ----------------->
         <div class="row portfolio-each-project">
           <div class="col-xl-6">
@@ -446,7 +481,7 @@
           <div class="col-xl-6">
             <img
               class="portfolio-img-update-mobile img-fluid"
-              src="./img-ux/boutique-homepage-july.png"
+              src="./img/boutique-img-july-3.png"
             />
           </div>
         </div>
